fonts and stuffs

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 <head>
   <title> trickyco.de - lloyd's blog. </title>
-  <link href='css/style.css' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/zenburn.css" type="text/css">
+  <link rel="stylesheet" href="css/style.css"  type="text/css">
+  <script src="js/libs.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
 <div id="header">
@@ -32,6 +35,11 @@ lorem ipsum dipshit. lorem ipsum dipshit. lorem ipsum dipshit.
 lorem ipsum dipshit. lorem ipsum dipshit. lorem ipsum dipshit.
 lorem ipsum dipshit. lorem ipsum dipshit. lorem ipsum dipshit.
 lorem ipsum dipshit. lorem ipsum dipshit. lorem ipsum dipshit.
+<pre><code id="code" class="javascript">    var i = 0;
+    while (i < j) {
+        myar.push("foo");
+    }
+</code></pre>
 lorem ipsum dipshit. lorem ipsum dipshit. lorem ipsum dipshit.
 lorem ipsum dipshit. lorem ipsum dipshit. lorem ipsum dipshit.
 lorem ipsum dipshit. lorem ipsum dipshit. lorem ipsum dipshit.
