bring in all me posts

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
+<div id="seo">
+  trickyco.de is the website of Lloyd Trevor Hilaiel.  Here you'll find
+  some of his thoughts and an index of his projects.
+</div>
 <div id="header">
   <div class="img"><img src="i/me.png"></div>
   <div class="title">trickyco.de</div>
