hide the projects hammer until issue #3 is fixed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="icon twitter"><a href="http://twitter.com/#!/lloydhilaiel"><img src="i/twitter.png" title="See how I tweet."></a></div>
     <div class="icon github"><a href="https://github.com/lloyd" title="Let's hack on shit."><img src="i/github.png"></a></div>
     <div class="icon email"><a title="Send me email." href="mailto:lloyd@hilaiel.com"><img src="i/email.png"></a></div>
-    <div class="icon projects"><a title="The work that I do." href="projects"><img src="i/projects.png"></a></div>
+    <div style="display: none;" class="icon projects"><a title="The work that I do." href="projects"><img src="i/projects.png"></a></div>
     <div class="icon blog"><a title="The words that I write." href="/"><img src="i/blog.png"></a></div>
   </div>
 </div>
