about screen.  closes #6.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,31 @@
   <script src="js/libs.js"></script>
 </head>
 <body>
-<div id="seo">
-  trickyco.de is the website of Lloyd Trevor Hilaiel.  Here you'll find
-  some of his thoughts and an index of his projects.
+<div id="about">
+  <div>
+  <p>
+    <b>trickyco.de</b> is the personal website of Lloyd Hilaiel, a hacker who
+    works for <a href="http://mozilla.org">Mozilla</a>, lives in Denver, and
+    is interested in the the technologies that make the web possible.
+  </p>
+
+  <p>
+    All the stuff you'll find here is available under a
+    <a href="http://creativecommons.org/licenses/by-sa/3.0/us/">CC BY-SA 3.0</a> license
+    (use it and change it, just don't lie about who wrote it).  Icons on this site are
+    commercially available from <a href="http://steedicons.com/">steedicons.com</a>.
+    Fonts used are available in Google's <a href="">Web Font directory</a>, and I'm
+    using <a href="http://www.google.com/webfonts/family?family=Cabin+Sketch&subset=latin">Cabin Sketch</a>,
+    <a href="http://www.google.com/webfonts/family?family=Lekton&subset=latin">Lekton</a>,
+    and <a href="http://www.google.com/webfonts/family?family=News+Cycle&subset=latin">News Cycle</a>.
+    As for javascript libraries,
+    <a href="https://github.com/coreyti/showdown">showdown.js</a> turns my markdown into html,
+    <a href="http://softwaremaniacs.org/soft/highlight/en/">highlight.js</a> makes code pretty colors,
+    and <a href="http://jquery.com">jquery</a> makes everything else terse, fast, and fun.  Finally,
+    <a href="http://toolness.com">Atul</a>, <a href="http://finette.com">Pascal</a>, and
+    <a href="http://www.stephenwildish.co.uk/">Stephen</a> inspired the design.
+  </p>
+  </div>
 </div>
 <div id="header">
   <div class="container">
