massage about language

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <p>
     <b>trickyco.de</b> is the personal website of Lloyd Hilaiel, a hacker who
     works for <a href="http://mozilla.org">Mozilla</a>, lives in Denver, and
-    is interested in the the technologies that make the web possible.
+    is interested in web technologies.
   </p>
 
   <p>
@@ -27,9 +27,12 @@
     As for javascript libraries,
     <a href="https://github.com/coreyti/showdown">showdown.js</a> turns my markdown into html,
     <a href="http://softwaremaniacs.org/soft/highlight/en/">highlight.js</a> makes code pretty colors,
-    and <a href="http://jquery.com">jquery</a> makes everything else terse, fast, and fun.  Finally,
-    <a href="http://toolness.com">Atul</a>, <a href="http://finette.com">Pascal</a>, and
-    <a href="http://www.stephenwildish.co.uk/">Stephen</a> inspired the design.
+    and <a href="http://jquery.com">jquery</a> makes everything else terse, fast, and fun.  
+  </p>
+  <p>
+    Finally, <a href="http://toolness.com">Atul</a>, <a href="http://finette.com">Pascal</a>, and
+    <a href="http://www.stephenwildish.co.uk/">Stephen</a> inspired the site's design.  And in case you're
+    interested, this site's code is <a href="https://github.com/lloyd/trickyco.de">available on github</a>.
   </p>
   </div>
 </div>
