--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> trickyco.de - lloyd's blog. </title>
+  <title> lloyd.io - lloyd's blog. </title>
   <link rel="stylesheet" href="css/zenburn.css" type="text/css">
   <link rel="stylesheet" href="css/style.css"  type="text/css">
   <script src="js/libs.js"></script>
@@ -10,7 +10,7 @@
 <div id="about">
   <div>
   <p>
-    <b>trickyco.de</b> is the personal website of Lloyd Hilaiel, a hacker who
+    <b>lloyd.io</b> is the personal website of Lloyd Hilaiel, a hacker who
     works for <a href="http://mozilla.org">Mozilla</a>, lives in Denver, and
     is interested in web technologies.
   </p>
@@ -32,14 +32,14 @@
   <p>
     Finally, <a href="http://toolness.com">Atul</a>, <a href="http://finette.com">Pascal</a>, and
     <a href="http://www.stephenwildish.co.uk/">Stephen</a> inspired the site's design.  And in case you're
-    interested, this site's code is <a href="https://github.com/lloyd/trickyco.de">available on github</a>.
+    interested, this site's code is <a href="https://github.com/lloyd/lloyd.io">available on github</a>.
   </p>
   </div>
 </div>
 <div id="header">
   <div class="container">
     <a title="About me and this site." href="#"><div class="me icon"></div></a>
-    <div class="title"><a title="Go to the index." href="/">trickyco.de</a></div>
+    <div class="title"><a title="Go to the index." href="/">lloyd.io</a></div>
     <a title="Get a feed of this site." href="feed.atom"><div class="icon feed"></div></a>
     <a title="Watch me tweet." href="http://twitter.com/#!/lloydhilaiel"><div class="icon twitter"></div></a>
     <a title="Let's hack on shit." href="https://github.com/lloyd"><div class="github icon"></div></a>
