--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title> lloyd.io - lloyd's blog. </title>
   <link rel="stylesheet" href="css/zenburn.css" type="text/css">
   <link rel="stylesheet" href="css/style.css"  type="text/css">
+  <link title="lloyd.io: Lloyd Hilaiel's's blog" type="application/atom+xml" href="http://lloyd.io/feed.atom" rel="alternate">
   <script src="js/libs.js"></script>
 </head>
 <body>
