add meta tag to 'claim website' for tip-the-web

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/style.css"  type="text/css">
   <link title="lloyd.io: Lloyd Hilaiel's's blog" type="application/atom+xml" href="http://lloyd.io/feed.atom" rel="alternate">
   <script src="js/libs.js"></script>
+  <meta name="ttw" content="35t2p1r" />
 </head>
 <body>
 <div id="about">
