--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
     (use it and change it, just don't lie about who wrote it).  Icons on this site are
     commercially available from <a href="http://steedicons.com/">steedicons.com</a>.
     Fonts used are available in Google's <a href="">Web Font directory</a>, and I'm
-    using <a href="http://www.google.com/webfonts/family?family=Cabin+Sketch&subset=latin">Cabin Sketch</a>,
-    <a href="http://www.google.com/webfonts/family?family=Lekton&subset=latin">Lekton</a>,
-    and <a href="http://www.google.com/webfonts/family?family=News+Cycle&subset=latin">News Cycle</a>.
+    using <a href="http://www.google.com/webfonts/family?family=Ubuntu&subset=latin">Ubuntu</a> and
+    <a href="http://www.google.com/webfonts/family?family=Lekton&subset=latin">Lekton</a>.
     As for javascript libraries,
     <a href="https://github.com/coreyti/showdown">showdown.js</a> turns my markdown into html,
     <a href="http://softwaremaniacs.org/soft/highlight/en/">highlight.js</a> makes code pretty colors,
