--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <a title="About me and this site." href="#"><div class="me icon"></div></a>
     <div class="title"><a title="Go to the index." href="/">lloyd.io</a></div>
     <a title="Get a feed of this site." href="feed.atom"><div class="icon feed"></div></a>
-    <a title="Watch me tweet." href="http://twitter.com/#!/lloydhilaiel"><div class="icon twitter"></div></a>
+    <a title="Watch me tweet." href="http://twitter.com/lloydhilaiel"><div class="icon twitter"></div></a>
     <a title="Let's hack on shit." href="https://github.com/lloyd"><div class="github icon"></div></a>
     <a title="Send me email." href="mailto:lloyd@hilaiel.com"><div class="icon email"></div></a>
     <a style="display: none;" title="The work that I do." href="projects"><div class="icon projects"></div></a>
