mostly working under jekyll

--- a/_posts/2006-08-31-building-emacs-on-leopard-from-macports.html
+++ b/_posts/2006-08-31-building-emacs-on-leopard-from-macports.html
@@ -1,4 +1,8 @@
+---
 title: building emacs on leopard from macports
+layout: post
+---
+
 <p>I cannot live without X11 emacs!  It doesn&rsquo;t build from macports right
 now.  As far as I can tell, the emacs that apple ships with leopard is
 broken, at least for me after upgrade I get:</p>
