--- a/_posts/2008-02-07-improving-the-ruby-gc.html
+++ b/_posts/2008-02-07-improving-the-ruby-gc.html
@@ -1,4 +1,8 @@
+---
 title: Improving the Ruby GC
+layout: post
+---
+
 <h2>overview</h2>
 
 <p>This page details some changes to the ruby garbage collector which seem
