--- a/_posts/2008-05-01-matz-the-ruby-trunk-and-gc-changes.html
+++ b/_posts/2008-05-01-matz-the-ruby-trunk-and-gc-changes.html
@@ -1,4 +1,8 @@
+---
 title: matz, the ruby trunk, and GC changes
+layout: post
+---
+
 <p>w00t. An email from matz, and a little spelunking in the ruby subversion
 repository shows that there’s some tinkering going on in ruby garbage
 collection land. Here are the interesting change logs:</p>
