--- a/_posts/2009-09-03-a-breadth-first-attempt-at-learning-about-programming-and-computers.html
+++ b/_posts/2009-09-03-a-breadth-first-attempt-at-learning-about-programming-and-computers.html
@@ -1,4 +1,8 @@
+---
 title: A breadth-first attempt at learning about programming and computers
+layout: post
+---
+
 <p>A set of questions that can be used as a jump off point for discussions and learning about computers the internet, and programming.</p>
 
 <h2>Theory Questions:</h2>
