--- a/_posts/2009-09-03-load-simulation-for-serving-of-large-static-content.html
+++ b/_posts/2009-09-03-load-simulation-for-serving-of-large-static-content.html
@@ -1,4 +1,8 @@
+---
 title: Load simulation for serving of large static content
+layout: post
+---
+
 <p>Recently we spent a little time optimizing some servers. These are
 linux machines running apache serving static and dynamic content using
 php. Each apache process consumes 13mb of private resident memory
