--- a/_posts/2009-09-03-the-open-web-my-spin.html
+++ b/_posts/2009-09-03-the-open-web-my-spin.html
@@ -1,4 +1,8 @@
+---
 title: The "Open Web", my spin.
+layout: post
+---
+
 <p>Later this week I’ll be moderating a chat entitled “Implementing the open web” at <a href="http://www.gluecon.com/">gluecon</a> in my home town, Denver.</p>
 
 <p>So in preparation for this panel, the logical first step seems to be to establish a clear and concrete definition for the “open web”…</p>
