--- a/_posts/2009-09-09-redcloth-textile-to-pdf-conversion.html
+++ b/_posts/2009-09-09-redcloth-textile-to-pdf-conversion.html
@@ -1,3 +1,7 @@
+---
 title: Redcloth/Textile to PDF conversion
+layout: post
+---
+
 <p>A little make magic (leveraging redcloth and htmldoc) seems to have done the trick. Now high quality print output it ain't, but a good start!</p>
 <p><script src="https://gist.github.com/183900.js?file=gistfile1.mak"></script></p>
