--- a/_posts/2009-09-11-chromium-on-64-bit-arch-linux.html
+++ b/_posts/2009-09-11-chromium-on-64-bit-arch-linux.html
@@ -1,4 +1,8 @@
+---
 title: chromium on 64 bit (arch) linux
+layout: post
+---
+
 <p>Really not much to write about, it was trivial to do, and <em>feels</em> a
 hell of a lot faster than the burning fox.  Steps?</p>
 
