--- a/_posts/2009-09-23-fixing-lockfile-gem-v1.4.3-for-ruby-1.9.html
+++ b/_posts/2009-09-23-fixing-lockfile-gem-v1.4.3-for-ruby-1.9.html
@@ -1,4 +1,8 @@
+---
 title: fixing lockfile gem (v1.4.3) for ruby 1.9
+layout: post
+---
+
 
   <pre>[lth@clover sup]$ diff /usr/lib/ruby/gems/1.9.1/gems/lockfile-1.4.3/lib/lockfile.rb{~,}
 475c475
