--- a/_posts/2009-09-25-bi-directional-git-andltgt-svn-part-i.html
+++ b/_posts/2009-09-25-bi-directional-git-andltgt-svn-part-i.html
@@ -1,4 +1,8 @@
+---
 title: bi-directional git &lt;=&gt; svn - part I
+layout: post
+---
+
 <h2>What&rsquo;s the point?</h2>
 
 <p>There are many reasons why git-svn integration is <em>interesting</em>, and
