--- a/_posts/2009-10-02-orderly-jsonschema.html
+++ b/_posts/2009-10-02-orderly-jsonschema.html
@@ -1,4 +1,8 @@
+---
 title: Orderly JSONSchema
+layout: post
+---
+
 <p>I&rsquo;ve always wanted a concise and beautiful schema language for JSON.
 This desire stems from a real world need that I&rsquo;ve hit repeatedly.
 Given in-memory data that has been hydrated from a stream of JSON, of
