--- a/_posts/2009-10-06-forwarding-orderly-json-v0.html
+++ b/_posts/2009-10-06-forwarding-orderly-json-v0.html
@@ -1,4 +1,8 @@
+---
 title: Forwarding Orderly JSON - v0
+layout: post
+---
+
 <p>Recently I proposed
 <a href="http://trickyco.de/orderly-jsonschema">orderly</a>, an idea
 for a small microlanguage on top of JSONSchema &mdash; something easier to
