--- a/_posts/2010-02-03-footnotes.html
+++ b/_posts/2010-02-03-footnotes.html
@@ -1,4 +1,8 @@
+---
 title: footnotes
+layout: post
+---
+
 <p>[[posterous-content:tmsEpbABufcelnAmIgjh]] HTML5!<sup>1</sup></p>
 <p><span style="font-size: 80%;">1. Has more footnotes than any other implementation.  Evar.</span></p>
 <p>(screencap from <a href="http://plupload.com/">pluploader</a>)</p>
