--- a/_posts/2010-08-06-itches-2010.8.6.html
+++ b/_posts/2010-08-06-itches-2010.8.6.html
@@ -1,4 +1,8 @@
+---
 title: itches, #2010.8.6
+layout: post
+---
+
 <p>As I spend more and more of my free time digging around in reptilian
 mailing lists and such, I find that I&rsquo;ve begun feeling itchy.  Here
 are four little itches that might be interesting for someone to
