--- a/_posts/2010-08-12-cheating-on-subversion-without-getting-caught.html
+++ b/_posts/2010-08-12-cheating-on-subversion-without-getting-caught.html
@@ -1,4 +1,8 @@
+---
 title: Cheating on Subversion Without Getting Caught
+layout: post
+---
+
 <p>This post lightly explores the problem of &ldquo;automatically&rdquo; backing up a git repository to subversion.  <em>Why</em> would anyone want to do this? Well, if your organization has a policy that all code must make it into subversion, but your team is interested in leveraging git in a deeper way than just by using git-svn as a sexy subversion client, then you&rsquo;ll find yourself pondering the question of repository synchronization.</p>
 
 <p>For our purposes, we&rsquo;re guided by the following requirements:</p>
