--- a/_posts/2011-04-26-whats-new-in-yajl-two.html
+++ b/_posts/2011-04-26-whats-new-in-yajl-two.html
@@ -1,4 +1,8 @@
+---
 title: What's New In YAJL Two?
+layout: post
+---
+
 <p><a href="http://lloyd.github.com/yajl">YAJL</a> is a little sax style JSON parser written
 in C (conforming to C99).  The first iteration was put together in a couple
 evening/weekend hacking sessions, and YAJL sat in version zero for about two
