--- a/_posts/2011-06-02-jsonselect-grows-up.html
+++ b/_posts/2011-06-02-jsonselect-grows-up.html
@@ -1,4 +1,8 @@
+---
 title: JSONSelect Grows Up
+layout: post
+---
+
 <p><a href="http://jsonselect.org/">JSONSelect</a> is a query language for JSON.
 With JSONSelect you can write small patterns that match against JSON
 documents.  The language is mostly an adaptation of CSS to JSON,
