--- a/_posts/2013-05-15-what-is-persona.html
+++ b/_posts/2013-05-15-what-is-persona.html
@@ -1,6 +1,9 @@
+---
 title: What Is Persona?
+layout: post
+---
 
-<p><abstract>
+<p>
 I've worked on the Persona service for over two years now.
 My involvement began on a fateful airplane ride with the <a href="http://www.open-mike.org/entry/verified-email-protocol">father of the specification</a> that would become Persona.
 Shortly after, on April 6th 2011 I made the <a href="https://github.com/mozilla/browserid/commit/1aa343">first commit</a>.
@@ -15,7 +18,6 @@ The community passionately defends this vision, they know when a feature or chan
 How succinctly can it be expressed?
 Let's find out: this post is my personal attempt to express the Persona vision.
 I would love to know how others find this, whether those who really care about Persona would empasize the same points.</p>
-</abstract>
 
 <p></p>
 
