--- a/_posts/2008-05-15-ruby-1.8.6-vs-1.9-performance-and-memory-usage.html
+++ b/_posts/2008-05-15-ruby-1.8.6-vs-1.9-performance-and-memory-usage.html
@@ -1,4 +1,8 @@
+---
 title: ruby 1.8.6 vs 1.9 - performance & memory usage
+layout: post
+---
+
 <p>Seeing all this action in ruby trunk, combined with what I’ve read
 ’round the net had piqued my interest in 1.9 performance differences.</p>
 
