--- a/_posts/2009-09-03-a-shiny-new-blog.html
+++ b/_posts/2009-09-03-a-shiny-new-blog.html
@@ -1,4 +1,8 @@
+---
 title: a shiny new blog
+layout: post
+---
+
 <p>Expiration of my account at <a href="http://hub.org">hub.org</a>, and my
 discovery of <a href="http://mosso.com">mosso</a> &amp;
 <a href="http://slicehost.com">slicehost</a> has prompted me to move all my
