--- a/_posts/2009-09-03-parse-json-in-ruby-in-1-4-the-time-of-yaml.html
+++ b/_posts/2009-09-03-parse-json-in-ruby-in-1-4-the-time-of-yaml.html
@@ -1,4 +1,8 @@
+---
 title: Parse JSON in ruby in 1/4 the time of YAML
+layout: post
+---
+
 <p>Crazy claim, eh? I figure there’s no better way to get this claim tested that by posting it as a truth!</p>
 
 <p>We’ll here’s the story: Once upon a time, lloyd (that&rsquo;s me) wanted <a href="http://lloyd.github.com/yajl/">a
