--- a/_posts/2009-09-04-npapi-the-html5-file-object-and-the-glory-of-unix.html
+++ b/_posts/2009-09-04-npapi-the-html5-file-object-and-the-glory-of-unix.html
@@ -1,4 +1,8 @@
+---
 title: NPAPI, the HTML5 File object, and the glory of UNIX
+layout: post
+---
+
 <h2>Web Processification</h2>
 
 <p>Earlier today I was impressing my wife with some unix foo by automatically swapping FIRST LAST &mdash;> LAST, FIRST formatted data while sorting and finding duplicated entries (ok, so she was only mildly impressed).  The shell command looked a little like this:</p>
