--- a/_posts/2009-09-24-installing-the-sup-mua-on-64bit-arch-linux.html
+++ b/_posts/2009-09-24-installing-the-sup-mua-on-64bit-arch-linux.html
@@ -1,4 +1,8 @@
+---
 title: installing the sup MUA on 64bit arch linux
+layout: post
+---
+
 <p>You&rsquo;ll probably get here from a google search on trying to figure out
 how to get sup running on your arch box that was recently upgraded to
 ruby 1.9.  sure it hurts, but it&rsquo;s progress!  Pick a different distro
