--- a/_posts/2010-09-20-jschannel-taming-postmessage.html
+++ b/_posts/2010-09-20-jschannel-taming-postmessage.html
@@ -1,4 +1,8 @@
+---
 title: JSChannel: Taming postMessage()
+layout: post
+---
+
 <p>This post presents <a href="http://github.com/mozilla/jschannel">JSChannel</a>, a
 little open source JavaScript library that sits atop HTML5&rsquo;s
 cross-document messaging and provides rich messaging semantics and an
