--- a/_posts/2010-10-25-challenges-in-repurposing-the-addon-sdk-aka-jetpack.html
+++ b/_posts/2010-10-25-challenges-in-repurposing-the-addon-sdk-aka-jetpack.html
@@ -1,4 +1,8 @@
+---
 title: Challenges in Repurposing the Addon SDK (aka, jetpack)
+layout: post
+---
+
 <p>Lately I&rsquo;ve been collaborating with Marcio Galli on the
 <a href="http://mozillalabs.com/chromeless">chromeless project</a>
 in Mozilla Labs, and one thing I like about the approach is that
