--- a/_posts/2010-01-07-how-the-web-works.html
+++ b/_posts/2010-01-07-how-the-web-works.html
@@ -3,5 +3,7 @@ title: how the web works
 layout: post
 ---
 
-<p><img src="i/how_the_web_works.png"></p>
-<p>A graphical pontification on how the web actually works...</p>
+A graphical pontification on how the web actually works...
+
+
+->[How the web Works]({{site.url}}/i/how_the_web_works.png)<-
