--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@ title: lloyd's blog
     </div>
     <div class="date">{{ post.date }}</div>
     <div class="comments"><a href="{{ post.id }}#disqus_thread" data-disqus-identifier="{{ post.id }}">comments</a></div>
-    <div class="abstract">{{ post.excerpt }}</div>
+    <div class="abstract">
+      {{ post.excerpt }}
+      <div class="more"><a href="{{ post.url }}">read more &gt;&gt;</a></div>
+    </div>
   </div>
 {% endfor %}
 </div>
