--- a/_posts/2009-09-16-drags-a-droppin-and-events-a-bubblin.html
+++ b/_posts/2009-09-16-drags-a-droppin-and-events-a-bubblin.html
@@ -4,10 +4,13 @@ layout: post
 ---
 
 <p>In fiddling more and more with whiz bang HTML drag and drop (in safari 4.x and Firefox 3.5), some things caught me by surprise, primarily because I had already had an idea about "how drag and drop works" that wasn't from the web world.  Specifically, in <a href="http://browserplus.yahoo.com">BrowserPlus</a> we invented a very simple model for a web developer to express interest in capturing desktop sourced file drags.  Our model was motivated more by ease of implementation and simplicity than by deep adherence to the "precedent" set by browser vendors.  At that point there wasn't all that much in the way of precedent....</p>
+
+
 <p>Anyhow, I wanted to document the way both browser native DnD works and BrowserPlus, if for nothing else as a note to myself.  Let's begin with a live sample that you might enjoy if you're on a late model Safari or Firefox (untested elsewhere, YMMV).</p>
 <h3>A DnD Sample</h3>
 
-<p><iframe src="http://very.trickyco.de/projects/misc/html5dnd.html" border="0" height="300" width="600"></iframe></p>
+<p>(sample no longer available)</p>
+
 <p>So pick up a file from your desktop and hover it on over the sample.  Notice a couple things:</p>
 <ul>
 <li> <strong> Drag events propagate along the node hierarchy </strong> - if you hover over blue, the drag handle attached to yellow (his parent) is receiving the drag.  Blue himself has no handler. </li>
