--- a/_posts/2010-08-04-going-lizard-riding.html
+++ b/_posts/2010-08-04-going-lizard-riding.html
@@ -3,6 +3,9 @@ title: Going Lizard Riding
 layout: post
 ---
 
+Whereby I leave Yahoo!, and join Mozilla...
+
+
 <p><img src="http://farm2.static.flickr.com/1086/1036693826_26bd7bdcd2.jpg" alt="dinosaur w/saddle by williac, on Flickr" /></p>
 
 <p>(photo cred &ndash; <a href="http://www.flickr.com/photos/williac/1036693826/">williac</a>)</p>
