--- a/splash.html
+++ b/splash.html
@@ -63,7 +63,7 @@ div.headshot img {
       <a href="http://ucsc.edu">University of California</a>, <a href="http://yahoo.com">Yahoo!</a>,
       and <a href="http://mozilla.org">Mozilla</a>.  I have been a
       consultant, a teacher, an evangelist, a principal engineer, and
-      a director.  I've lead teams of four, and teams of twenty.  I am
+      a director.  I've led teams of four, and teams of twenty.  I am
       the creator and maintainer of several
       <a href="https://github.com/lloyd">popular open source
       libraries</a>.
