a project timeline and new splash page for the old blog

--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@ nav a {
   <nav>
     <a href="/blog">blog</a>
     <a href="/work">my work</a>
-    <a href="/resume">resume</a>
-    <a href="/contact">contact</a>
+    <a href="mailto:me@lloyd.io">contact</a>
   </nav>
   <section>
     <div class="headshot"><img src="{{site.url}}/i/me-big.png"></div>
@@ -69,13 +68,15 @@ nav a {
       I love technology and am awed by the frequency and extent to it is changing our world.
       I got my start in the days of zork and 600 baud modems, wrote adventure games as gifts in grade school and taught myself c++ when I was twelve.
       I started working in technology professionally my first year in college, building dynamic web applications before there were reasonable tools to do so.
-      Since then I've seen two startups through to successful conclusion, built several fantastic teams and with them shipped multiple successful products, and produced software that has landed on hundreds of millions of computers.
+      Since then I've seen two startups through to successful conclusion, built several fantastic teams and with them shipped multiple successful products.  Along the way I have produced software that has landed on hundreds of millions of computers.
     </p><p>
       This is to say technology is both my profession and my passion.
       My goal is simply to <i>create software that matters with people who care</i>.
     </p><p>
-      To learn more about me, read my blog, see my project timeline, and peruse my resume.
-      Finally, most of my open source work lives on github where I've partied since 2008.
+      To learn more about me, read my blog, and see the open
+      source projects I've created.  Finally, most of my open source
+      work <a href="http://github.com/lloyd">lives on github</a> where
+      I've partied since 2008.
     </p><p>
       Onward!
     </p>
