--- a/work/index.html
+++ b/work/index.html
@@ -247,7 +247,8 @@ summary {
                   more usable.  I started the project with Mike Hansen
                   and Ben Adida in
                   <a href="https://github.com/mozilla/persona/commit/1aa34387f">april of 2011</a>,
-                  and saw it through to implementation on thousands of sites, with millions of users.
+                  and we is usage has grown to thousands of sites, with millions of users total.
+                  And Persona lives on today...
                 </p>
 	          </div>
 	          <div class="project" style="margin-top: 640px;">
