--- a/work/index.html
+++ b/work/index.html
@@ -251,7 +251,18 @@ summary {
                   And Persona lives on today...
                 </p>
 	          </div>
-	          <div class="project" style="margin-top: 640px;">
+	          <div class="project" style="margin-top: 40px;">
+	            <div class="rightarrow"></div>
+	            <h2><a href="http://github.com/lloyd/docstract"><span class="moniker">docstract</span>: Code comments to JSON</a></h2>
+                <div class="date">Feb, 2011</div>
+	            <p>
+                  Docstract is a library and command line utility written in python to extract inline
+                  documentation from javascript and generate well structured json.  The claim of this
+                  project is that the breaking apart of comment extraction and rendering leads to a
+                  much more robust toolchain for fantastic API docs.
+                </p>
+	          </div>
+	          <div class="project" style="margin-top: 340px;">
 	            <div class="rightarrow"></div>
 	            <h2><a href="http://github.com/lloyd/yajl"><span class="moniker">yajl</span>: Fast streaming JSON parsing</a></h2>
                 <div class="date">July, 2007</div>
