prose tweak around JSONSelect

--- a/work/index.html
+++ b/work/index.html
@@ -320,8 +320,9 @@ summary {
               <div class="date">May, 2011</div>
 	          <p>
 	            Slice through complex JSON structures with the tool that
-	            you already know: CSS selectors.  I wrote a spec and
-	            a reference implementation, others ported it everywhere.
+	            you already know: CSS selectors.  I wrote a spec, a reference
+                implementation, and a <a href="http://jsonselect.org/#tryit">cool interactive demo</a>.  People got
+                excited and <a href="http://jsonselect.org/#code">ported it everywhere</a>.
               </p>
 	        </div>
 	        <div class="project" style="margin-top: 100px;">
